fixed broken css

--- a/frontend/src/modules/helper/PostSubmission.css
+++ b/frontend/src/modules/helper/PostSubmission.css
@@ -282,7 +282,7 @@
 }
 
 .custom-pages-selector > .pagesSelector-dropdown {
-  width: 85%;
+  width: 83%;
 }
 
 .custom-pages-selector select {
